samples/_failures_safe/1761723446_f9077e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_904c766d.c: In function ‘main’:
./samples/SAFE/__tmp_904c766d.c:175:39: error: expected ‘]’ at end of input
  175 |         Token token = tokens->tokens[i
      |                                       ^
      |                                       ]
./samples/SAFE/__tmp_904c766d.c:175:9: error: expected declaration or statement at end of input
  175 |         Token token = tokens->tokens[i
      |         ^~~~~
./samples/SAFE/__tmp_904c766d.c:175:9: error: expected declaration or statement at end of input
